--- a/assignments/session05/microblog/templates/layout.html
+++ b/assignments/session05/microblog/templates/layout.html
@@ -6,6 +6,15 @@
   </head>
   <body>
     <h1>My Microblog</h1>
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul class=flashes>
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
     <div class="content">
     {% block body %}{% endblock %}
     </div>
