--- a/assignments/session05/microblog/templates/show_entries.html
+++ b/assignments/session05/microblog/templates/show_entries.html
@@ -13,6 +13,11 @@
       <input type="submit" value="Share" name="Share"/>
     </div>
   </form>
+
+  <h3>Current logged in user: {{ current_username }}</h3>
+  <input type=submit value=Logout onclick="location.href='/logout'">
+
+  </br></br>
   <h2>Posts</h2>
   <ul class="entries">
   {% for entry in entries %}
@@ -24,6 +29,17 @@
     </li>
   {% else %}
     <li><em>No entries here so far</em></li>
+  {% endfor %}
+  </ul>
+  </br></br>
+  <h2>Users</h2>
+  <ul class="entries">
+  {% for user in users %}
+    <li>
+        <div>Username: {{ user.username }} | Password: {{ user.password }}</div>
+    </li>
+  {% else %}
+    <li><em>No users!</em></li>
   {% endfor %}
   </ul>
 {% endblock %}
